# shopleecher

./: CMakeLists.txt  main.cpp  main.qml
Controllers/: detailsController.cpp  detailsController.h  settingsController.cpp  settingsController.h  userController.cpp  userController.h
Enums/: deviceEnum.h
Extensions/: network.cpp  network.h  thegioididong.cpp  thegioididong.h
Models/: database.cpp  database.h  leecher.cpp  leecher.h  user.cpp  user.h
Views/: DetailsScreen.qml  LoginScreen.qml  MainScreen.qml  SettingsScreen.qml  TestScreen.qml
Views/Components/: EasyButton.qml
